# rpcmo

./: Makefile  README.md  docker-compose.yml  sample_import.csv  sample_recurring_import.csv
backend/: .dockerignore  .env  .env.docker.example  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_rule_suggestions_updated_at.py
backend/app/: main.py
backend/app/api/routers/: backups.py  categories.py  forecast.py  imports.py  mapping_templates.py  receivables.py  recurring.py  reports.py  rules.py  transactions.py
backend/app/api/schemas/: backups.py  categories.py  common.py  forecast.py  imports.py  recurring.py  reports.py  rules.py  transactions.py
backend/app/application/services/: auto_categorization.py  backup_service.py  categorization_service.py  forecast_service.py  import_service.py  recurring_detection_service.py  report_service.py  rule_category_resolver.py  rule_suggestion_service.py
backend/app/core/: config.py  db.py  dependencies.py  errors.py  logging.py  pagination.py
backend/app/domain/: enums.py
backend/app/domain/services/: backup_crypto.py  rule_conditions.py  text_normalize.py  transaction_hash.py
backend/app/infrastructure/csv/: parser.py
backend/app/infrastructure/db/models/: __init__.py  account.py  backup_file.py  base.py  categorization_rule.py  category.py  forecast.py  import_session.py  mapping_template.py  receivable.py  tax_profile.py  (+4 more)
backend/app/ml/: __init__.py  balance_forecast.py  recurring_model.py
backend/fixtures/: sample_export.csv
(+78 files in other folders)
